--- a/glossary.tex
+++ b/glossary.tex
@@ -10,10 +10,109 @@
     description={Large Language Model}
 }
 
+\newglossaryentry{MSE}
+{
+	name=MSE,
+	description={Mean Squared Error}
+}
+
+\newglossaryentry{DDPM}
+{
+	name=DDPM,
+	description={Denoising Diffusion Probablistic Model}
+}
+
+\newglossaryentry{DDIM}
+{
+	name=DDIM,
+	description={Denoising Diffusion Implicit Model}
+}
+
+\newglossaryentry{AI}
+{
+	name=AI,
+	description={Artificial Intelligence}
+}
+
+\newglossaryentry{RoPE}
+{
+	name=RoPE,
+	description={Rotary Positiona Embeeding}
+}
+
+\newglossaryentry{CNN}
+{
+	name=CNN,
+	description={Convolutional Neural Network}
+}
+
+\newglossaryentry{ViT}
+{
+	name=ViT,
+	description={Vision Transformer}
+}
+
+\newglossaryentry{MLP}
+{
+	name=MLP,
+	description={Multi Layer Perceptron}
+}
+
+\newglossaryentry{CLS}
+{
+	name=CLS,
+	description={Classification}
+}
+
+\newglossaryentry{RNN}
+{
+	name=RNN,
+	description={Recurrent Neural Network}
+}
+
+
+\newglossaryentry{NCSN}
+{
+	name=NCSN,
+	description={Noise-Conditional Score Network}
+}
+
+\newglossaryentry{ALD}
+{
+	name=ALD,
+	description={Annealed Langevin Dynamic}
+}
+
+\newglossaryentry{ODE}
+{
+	name=ODE,
+	description={Ordinary Differential Equation}
+}
+
+
+
+\newglossaryentry{SDE}
+{
+	name=SDE,
+	description={Stochastic Differential Equation}
+}
+
+\newglossaryentry{SGM}
+{
+	name=SGM,
+	description={Score-Based Generative Model}
+}
+
 \newglossaryentry{DM}
 {
     name=DM,
     description={Diffusion Model}
+}
+
+\newglossaryentry{VI}
+{
+	name=VI,
+	description={Variational Inerence}
 }
 
 \newglossaryentry{GAN}
