--- a/theory_distillation.tex
+++ b/theory_distillation.tex
@@ -1,7 +1,7 @@
 \section{Diffusion Model Distillation}
-Diffusion models excel in generating high-quality and diverse images, showcasing remarkable capabilities in image synthesis. However, their main disadvantage is their long inference time. This stems from two factors: First, diffusion models have an iterative generation process removing noise step-by-step. To obtain high-quality images, often 50-100 steps are required. Second, recent diffusion models like Flux \cite{Flux} or HiDream \cite{HiDream} are very large, with billions of parameters, making each step computationally and memory intensive. These issues limits their use for real-time applications or in memory constraint environments such as edge devices.
+Diffusion models excel in generating high-quality and diverse images, showcasing remarkable capabilities in image synthesis. However, their main disadvantage is their long inference time. This stems from two factors: First, diffusion models have an iterative generation process removing noise step-by-step. To obtain high-quality images often 50-100 steps are required. Second, recent diffusion models like Flux \cite{Flux} or HiDream \cite{HiDream} are very large, with billions of parameters, making each step computationally and memory intensive. These issues limit their use for real-time applications or in memory constraint environments such as edge devices.
 
-Diffusion model distillation addresses these challenges. The principal idea of all distillation methods is to transfer the knowledge and image generation capacity from a fully trained diffusion model - often referred to as teacher model - to a target model - often referred to as student model. The research landscape reveals two complementary strategies: accelerating inference by reducing the number of denoising steps, and creating more compact models through model size reduction. The first strategy, reducing number of inference step, is more dominant in the literature and several different approaches such as adversarial distillation \cite{ADD, LADD}, progressive distillation \cite{ProgressiveDistillation, SDXL_Lightning}, distribution matching distillation \cite{DistillationMatching, ImprovedDistillationMatching}, consistency models \cite{ConsistencyModel, LatentConsistencyModel} and guided distillation \cite{GuidedDistillation}. The second strategy was explored via knowledge Distillation being very suitable for reducing the model size which was applied to  stable diffusion \cite{Bksdm} and stable diffusion XL \cite{Laptop, Koala}. To the best of our knowledge, however, it has not yet been applied on large transformer models such as Flux. \\
+Diffusion model distillation addresses these challenges. The principal idea of all distillation methods is to transfer the knowledge and image generation capacity from a fully trained diffusion model often referred to as teacher model to a target model often referred to as student model. The research landscape reveals two complementary strategies: accelerating inference by reducing the number of denoising steps, and creating more compact models through model size reduction. The first strategy, reducing number of inference step, is more dominant in the literature and several different approaches such as adversarial distillation \cite{ADD, LADD}, progressive distillation \cite{ProgressiveDistillation, SDXL_Lightning}, distribution matching distillation \cite{DistillationMatching, ImprovedDistillationMatching}, consistency models \cite{ConsistencyModel, LatentConsistencyModel} and guided distillation \cite{GuidedDistillation}. The second strategy was explored via knowledge Distillation being very suitable for reducing the model size which was applied to  stable diffusion \cite{Bksdm} and stable diffusion XL \cite{Laptop, Koala}. \\
 
 \subsection{Distillation Methods for Few-Step Diffusion Models}
 In the following various approaches are presented for training few step diffusion models. Each method employs a pre-trained teacher model to guide the distillation of a student model capable of generating images in significantly fewer steps.
@@ -31,7 +31,7 @@ In summary, LADD is a simplified and more compute efficient version of ADD maint
 
 
 \subsubsection{Progressive Distillation}
-In contrast to ADD, where a single training run is used to create a model that requires only very few inference steps to generate a high-quality image, the idea of progressive distillation \cite{ProgressiveDistillation} is to iteratively train models that require fewer and fewer inference steps, thereby reducing the complexity of the task within one iteration. Assuming a diffusion model requires $N$ steps during inference, then in the first iteration, a student model, initialized with the weights of the teacher model, is trained to generate images with only $\frac{N}{2}$ steps. In the second iteration, the previously trained student model is used as the teacher, and another student model is trained, needing only $\frac{N}{4}$ inference steps. This procedure can be repeated until a one-step model is reached. The objective function is similar to that used in training of a diffusion model. Let $\hat{f}$ be the teacher model and $f$ the student model. During training, a noisy input $\mathbf{z}_t$ is sampled from the training dataset. The student model is applied exactly once, $\mathbf{z}_{\text{pred}} = f(\mathbf{z}_t)$ while the teacher model is applied twice, $\hat{\mathbf{z}} = \hat{f}\circ \hat{f} \left(\mathbf{z}_t \right)  $. In the objective function, the prediction of the teacher $\hat{\mathbf{z}}$ is compared with the prediction of the student $\mathbf{z}_{\text{pred}}$, e.g, via MSE. This core idea is shown in fig. \ref{ProgressiveDistillation}. A possible downside of this method is that progressive distillation carries the risk of error accumulation, as in each iteration the previous student is used as a teacher, therefore especially two or one step models show a downgrade in performance. Furthermore, the iterative approach is resource intensive, as many trainings have to be performed.\\
+In contrast to ADD, where a single training run is used to create a model that requires only very few inference steps to generate a high-quality image, the idea of progressive distillation \cite{ProgressiveDistillation} is to iteratively train models that require fewer and fewer inference steps, thereby reducing the complexity of the task within one iteration. Assuming a diffusion model requires $N$ steps during inference, then in the first iteration, a student model, initialized with the weights of the teacher model, is trained to generate images with only $\frac{N}{2}$ steps. In the second iteration, the previously trained student model is used as the teacher and another student model is trained, needing only $\frac{N}{4}$ inference steps. This procedure can be repeated until a one-step model is reached. The objective function is similar to that used in training of a diffusion model. Let $\hat{f}$ be the teacher model and $f$ the student model. During training, a noisy input $\mathbf{z}_t$ is sampled from the training dataset. The student model is applied exactly once, $\mathbf{z}_{\text{pred}} = f(\mathbf{z}_t)$ while the teacher model is applied twice, $\hat{\mathbf{z}} = \hat{f}\circ \hat{f} \left(\mathbf{z}_t \right)  $. In the objective function, the prediction of the teacher $\hat{\mathbf{z}}$ is compared with the prediction of the student $\mathbf{z}_{\text{pred}}$, e.g, via MSE. This core idea is shown in fig. \ref{ProgressiveDistillation}. A possible downside of this method is that progressive distillation carries the risk of error accumulation, as in each iteration the previous student is used as a teacher, therefore especially two or one step models show a downgrade in performance. Furthermore, the iterative approach is resource intensive, as many trainings have to be performed.\\
 Stable Diffusion XL lightning \cite{SDXL_Lightning} is a distilled version of Stable Diffusion XL (SDXL) where, a combination of progressive and adversarial distillation is applied. First, the authors trained a version of SDXL with 32 inference steps using only progressive distillation. Afterwards, they additionally applied adversarial distillation to go further down to a few step-model.
 
 \begin{figure}[H]
@@ -50,11 +50,11 @@ Let $\left\{ x_t \right\}_{t=\epsilon}^T$ be a denoising trajectory where $x_\ep
 \begin{equation}
     f_\theta(x,t) = c_\text{skip}(t)x + c_\text{out}(t)F_\theta(x)
 \end{equation}
-where $F_\theta$ is a neural network and $c_\text{skip}(t)$ and $c_\text{out}(t)$ are differentiable function such as  $c_\text{skip}(\epsilon) = 1$ and $c_\text{out}(\epsilon) = 0$. During the training process, noise is first added to the image from the training dataset in a similar way to training a standard diffusion model obtaining a noisy image $x_{t+1}$. Next, the teacher model come into play and which is applied once to obtain a slightly denoised image $x_t^\phi$ where $\phi$ denotes the fixed parameters of the teacher model. It is important to note that both $x_{t+1}$ and $x_t^\phi$ lie on the same denoising path and accodingly to the self-consistency property  $f_\theta(x_{t+1},t+1) = f_\theta(x_t^\phi, t)$ should hold. Therefore, the training objective is given by 
+where $F_\theta$ is a neural network and $c_\text{skip}(t)$ and $c_\text{out}(t)$ are differentiable function such as  $c_\text{skip}(\epsilon) = 1$ and $c_\text{out}(\epsilon) = 0$. During the training process, noise is first added to the image from the training dataset in a similar way to training a standard diffusion model obtaining a noisy image $x_{t+1}$. Next, the teacher model is applied once to obtain a slightly denoised image $x_t^\phi$ where $\phi$ denotes the fixed parameters of the teacher model. It is important to note that both $x_{t+1}$ and $x_t^\phi$ lie on the same denoising path and accodingly to the self-consistency property  $f_\theta(x_{t+1},t+1) = f_\theta(x_t^\phi, t)$ should hold. Therefore, the training objective is given by 
 \begin{equation}
     \mathcal{L_\text{CD}}\left(\theta, \theta^-; \phi\right) = \mathbb{E}\left[ \lambda(t) d\left( f_\theta(x_{t+1}, t+1), f_{\theta^-}(x_{t}^\phi, t)  \right)  \right]
 \end{equation}
-where $\theta$ denotes the parameters of the student consistency model, $\theta^-$ denotes a running exponential moving average (EMA) of the past $\theta$ values and $d$ stands for the MSE. The EMA is used for training stability reasons. With this training framework one step models can be obtained. But also multi-step inference can be accomplished with this model if higher image quality is needed. It is worth noting that distillation is only one way to train consistency models. Another way is to train them from scratch. How this could be achieved is described in \cite{ConsistencyModel} but out of scope of this short summary. Furthermore, successive works shows that this concept can also be extended to latent space.  \cite{LatentConsistencyModel}. However, some literature \cite{LADD} claims that consistency models requires extensive hyperparameter tuning and engeneering in order to work.
+where $\theta$ denotes the parameters of the student consistency model, $\theta^-$ denotes a running exponential moving average (EMA) of the past $\theta$ values and $d$ stands for the MSE. The EMA is used for training stability reasons. With this training framework one step models can be obtained. But also multi-step inference can be accomplished with this model if higher image quality is needed. It is worth noting that distillation is only one way to train consistency models. Another way is to train them from scratch. How this could be achieved is described in \cite{ConsistencyModel} but out of scope of this short summary. Furthermore, successive works show that this concept can also be extended to latent space.  \cite{LatentConsistencyModel}. However, some literature \cite{LADD} claims that consistency models requires extensive hyperparameter tuning and engeneering in order to work.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{images/Background/Self_Consistency.png}  % adjust filename and width
@@ -99,7 +99,7 @@ In total, this method provide a good training framework for one-step diffusion m
 The second goal of distillation, besides reducing the number of inference steps, is to distill the knowledge and capabilities of large models into smaller ones. Hereby, knowledge distillation \cite{KnowledgeDistillation} is widely used \cite{Laptop, Koala, Bksdm}.
 
 \subsubsection{Knowledge Distillation}
-The concept of knowledge distillation was introduced for training a small model - referred to as the student - on classification tasks, using a larger model — referred to as the teacher — with strong generalization capabilities as guidance. It was shown, that computing the loss between the probability outputs of the teacher and the student enables much more efficient training than using the original class labels. In such a setting the small model could be trained on less data and with a higher learning rate. The authors hypothesized that even the very small probabilities the teacher assigns to incorrect classes, and particularly their relative magnitudes, carry valuable information for the student For example if a 2 of the MNIST dataset \cite{} should be classified it is valuable information for the model whether it resembles a 3 or a 5. When only hard targets, e.g., one-hot labels,  are used, this relational information is lost. Here, it is important to make this information accessible to the student meaning that e.g. in a classification problem one might have to deviate from the standard temperature $T$ of the softmax function to soften the probabilities even more. Specifically, both teacher and student use temperature scaling softmax($\frac{z_i}{T}$) where $T > 1$ makes the probability distribution softer, revealing more information about class similarities. In general, it has been shown that a combination of the loss $\mathcal{L_\text{KD}}$, calculated with the outputs from the teacher, and the original loss $\mathcal{L_\text{Task}}$, calculated with the hard labels, is advantageous
+The concept of knowledge distillation was introduced for training a small model referred to as the student - on classification tasks, using a larger model - referred to as the teacher with strong generalization capabilities as guidance. It was shown, that computing the loss between the probability outputs of the teacher and the student enables much more efficient training than using the original class labels. In such a setting the small model could be trained on less data and with a higher learning rate. The authors hypothesized that even the very small probabilities the teacher assigns to incorrect classes, and particularly their relative magnitudes, carry valuable information for the student For example if a 2 of the MNIST dataset \cite{} should be classified it is valuable information for the model whether it resembles a 3 or a 5. When only hard targets, e.g., one-hot labels,  are used, this relational information is lost. Here, it is important to make this information accessible to the student meaning that e.g. in a classification problem one might have to deviate from the standard temperature $T$ of the softmax function to soften the probabilities even more. Specifically, both teacher and student use temperature scaling softmax($\frac{z_i}{T}$) where $T > 1$ makes the probability distribution softer, revealing more information about class similarities. In general, it has been shown that a combination of the loss $\mathcal{L_\text{KD}}$, calculated with the outputs from the teacher, and the original loss $\mathcal{L_\text{Task}}$, calculated with the hard labels, is advantageous
 \begin{equation}
     \mathcal{L} = \mathcal{L}_\text{Task} + \lambda_\text{KD}\mathcal{L}_\text{KD}
 \end{equation}
@@ -107,4 +107,4 @@ This idea was used to train a smaller version of Stable Diffusion \cite{BERT} or
 \begin{equation}
     \mathcal{L} = \mathcal{L_\text{Task}} + \lambda_\text{OutKD} \mathcal{L_\text{OutKD}} + \lambda_\text{FeatKD} \mathcal{L_\text{FeatKD}}
 \end{equation}
-where $\mathcal{L_\text{Task}}$ is the loss used for regular training of diffusion models, $\mathcal{L_\text{FeatKD}}$ is the loss computed between the intermediate features and $\mathcal{L_\text{OutKD}}$ is the loss computed between the final output of the student and the teacher model. 
+where $\mathcal{L_\text{Task}}$ is the loss used for regular training of diffusion models, $\mathcal{L_\text{FeatKD}}$ is the loss computed between the intermediate features and $\mathcal{L_\text{OutKD}}$ is the loss computed between the final output of the student and the teacher model.
