--- a/theory_fundamental_NN.tex
+++ b/theory_fundamental_NN.tex
@@ -2,10 +2,10 @@
 In this section, the focus lies on the key fundamental building blocks of the neural networks which are used in the experiments in section \ref{}. 
 
 \subsection{Transformer}
-The introduction of transformer architecture \cite{AttentionIsAllYouNeed} was a decisive moment for the whole AI community. It significantly pushed forward the development in natural language and image processing. Therefore, it is no surprise that the latest models are based on this architecture type \cite{Claude, Gemini, Flux, HiDream}. \\
-Transformer were introduced as an alternative to recurrent neural networks  \cite{RNN} for processing sequential data like text. In the original paper, the transformer architecture leverages an encoder-decoder structure, however, there are variants like decoder-only \cite{GPT4, Lama} or encoder-only transformer \cite{BERT}. \\
+The introduction of transformer architecture \cite{AttentionIsAllYouNeed} was a decisive moment for the whole \gls{AI} community. It significantly pushed the development in natural language and image processing forward. Therefore, it is no surprise that the latest models are based on this architecture type \cite{Claude, Gemini, Flux, HiDream}. \\
+The transformer was introduced as an alternative to recurrent neural networks  \cite{RNN} for processing sequential data like text. In the original paper, the transformer architecture leverages an encoder-decoder structure, however, there are many variants like decoder-only \cite{GPT4, Lama} or encoder-only transformer \cite{BERT}. \\
 Transformers, as introduced in the original paper (Fig. \ref{transformer_architecture}), take text as input, which must first be converted into numerical form through a process called tokenization. This produces a sequence of tokens that are a numerical representation of words or subwords of the text. To provide the model with information about the position of each token in the sequence, positional encodings are added. These preprocessing steps occur before the input is fed into the transformer architecture. 
-Each encoder block consists of two sub-layers: (1) a multi-head self-attention mechanism followed by a residual connection \cite{ResidualConnection} and layer normalization \cite{LayerNorm}. The decoder blocks contain three sub-layers: (1) a masked multi-head self-attention where the masking prevents that future tokens are seen during the training process, (2) a cross-attention mechanism with the output of the encoder being and (3) an additional feedforward network. All three sub-layers are followed by residual connection and layer normalization. The final output is projected to vocabulary-sized logits representing a probability distribution over possible next tokens.
+Each encoder block consists of two sub-layers: (1) a multi-head self-attention mechanism followed by a residual connection \cite{ResidualConnection} and layer normalization \cite{LayerNorm}. The decoder blocks contain three sub-layers: (1) a masked multi-head self-attention where the masking prevents that future tokens are seen during the training process, (2) a cross-attention mechanism with the output of the encoder being and (3) an additional feedforward network. All three sub-layers are followed by a residual connection and layer normalization. The final output is projected to vocabulary-sized logits representing a probability distribution over possible next tokens.
 
 
 
@@ -17,7 +17,7 @@ Each encoder block consists of two sub-layers: (1) a multi-head self-attention m
 \end{figure}
 
 \subsection{Attention Mechanism}
-The attention mechanism is an integral part of the transformer architecture. It enables the model to focus on the input elements that are most important for the task at hand and ignore the less important ones. This mechanism was first introduced for RNNs \cite{OrgAttention} to overcome the information bottleneck, as traditionally in RNNs only the last hidden state is given as input for the next prediction. In \cite{OrgAttention}, all previous hidden states were presented to the model as additional input, and the task of the attention mechanism was to filter out those that were relevant for the prediction of the next state. The authors of \cite{AttentionIsAllYouNeed} leveraged the formalism and reformulated it for the transformer architecture that will be discussed in the following. \\
+The attention mechanism is an integral part of the transformer architecture. It enables the model to focus on the input elements that are most important for the task at hand and ignore the less important ones. This mechanism was first introduced for \gls{RNN}s \cite{OrgAttention} to overcome the information bottleneck, as traditionally in RNNs only the last hidden state is given as input for the next prediction. In \cite{OrgAttention}, all previous hidden states were presented to the model as additional input, and the task of the attention mechanism was to filter out those that were relevant for the prediction of the next state. The authors of \cite{AttentionIsAllYouNeed} leveraged the formalism and reformulated it for the transformer architecture that will be discussed in the following. \\
 In the attention mechanism, so-called queries, keys and values are computed. The attention mechanism can be understood as a soft lookup table where queries search for relevant keys, and the corresponding values are retrieved and weighted by similarity.
  A distinction is made between self-attention (fig. \ref{SelfAttentionFigure}) and cross-attention (fig. \ref{CrossAttentionFigure}). In self-attention, the interaction of the tokens within a sequence is calculated. In contrast, in cross-attention you have two input sequences with the goal that the model aligns and relates information between the two different sequences.
 
@@ -28,7 +28,7 @@ Let $X \in \mathbb{R}^{n\times d}$ be the embedding vector of the tokens. Then t
     &K = X \cdot W_k^T \\
     &V = X \cdot W_v^T
 \end{align}
-with $W_q^T \in \mathbb{R}^{d\times d_k}$, $W_k^T \in \mathbb{R}^{d\times d_k}$ and $W_v^T \in \mathbb{R}^{d\times d_v}$. Now, so-called scaled-dot product attention is used where the attention matrix $A$ that assign how much focus is put on the different parts of the token sequence is computed by the softmax of the scaled dot product between the queries and the keys 
+with $W_q^T \in \mathbb{R}^{d\times d_k}$, $W_k^T \in \mathbb{R}^{d\times d_k}$ and $W_v^T \in \mathbb{R}^{d\times d_v}$. Now, so-called scaled-dot product attention is used where the attention matrix $A$ that assigns how much focus is put on the different parts of the token sequence is computed by the softmax of the scaled dot product between the queries and the keys 
 \begin{equation}
     A = \text{softmax}\left( \frac{QK^T}{\sqrt{d_k}} \right)
 \end{equation}
@@ -36,7 +36,7 @@ The softmax function is defined as the following for a vector $\textbf{z} = \lef
 \begin{equation}
     \text{softmax}\left(z_i\right) = \frac{e^{z_i}}{\sum_j e^{z_j}}
 \end{equation}
-The scaling of the dot product $QK^T$ with the factor $\frac{1}{\sqrt{d_k}}$ is done in order to prevent vanishing gradients in the softmax function which occurs if the values become to0 small or too big.
+The scaling of the dot product $QK^T$ with the factor $\frac{1}{\sqrt{d_k}}$ is done in order to prevent vanishing gradients in the softmax function which occurs if the values become too small or too big.
 Finally, the attention matrix is applied with the values. This can be summarized in the following formulation
 \begin{equation}
     Z=\text{Attention}\left( Q, K, V \right)= \text{softmax}\left( \frac{QK^T}{\sqrt{d_k}} \right) V
@@ -52,7 +52,7 @@ One main challenge of the discussed attention mechanism is that it has quadratic
 \end{figure}
  
 \subsubsection{Cross-Attention}
-The goal of cross-attention is to relate two different sequences of tokens \textbf{$x_1$} and \textbf{$x_2$}. Commonly, the queries come from the target sequence ,e.g., decoder of the transformer, while the keys and values come from the source sequence, e.g., encoder output of transformer. Besides that the computation is the similar to the computation of self-attention.
+The goal of cross-attention is to relate two different sequences of tokens \textbf{$\mathbf{x}_1$} and \textbf{$\mathbf{x}_2$}. Commonly, the queries come from the target sequence ,e.g., decoder of the transformer, while the keys and values come from the source sequence, e.g., encoder output of transformer. Besides that the computation is similar to the computation of self-attention.
 
 
 \begin{figure}[H]
@@ -63,7 +63,7 @@ The goal of cross-attention is to relate two different sequences of tokens \text
 \end{figure}
 
 \subsubsection{Multi-Head Attention}
-Another trick is used in transformers to make the results of the attention operations even more expressive. Instead of only performing individual self- or cross-attentions in a transformer block, so-called multi-head attentions are used. Here, based on the input embeddings, not just one but N times keys, queries and values are calculated, each with different weight matrices $W_{q_i}^T \in \mathbb{R}^{d\times d_k}$, $W_{k_i}^T \in \mathbb{R}^{d\times d_k}$ and $W_{v_i}^T \in \mathbb{R}^{d\times d_v}$ with $i = 1,...,N$, and the attention mechanism is executed. Each attention that is carried out is designated as a $\text{head}_i$. The results of the N attentions are concatenated and combined with another linear projection $W^O \in \mathbb{R}^{Nd_v\times d}$.
+Multi-head attention is another trick used in transformers to make the results of the attention operations even more expressive. Instead of only performing individual self- or cross-attentions in a transformer block, so-called multi-head attentions are used. Here, based on the input embeddings, not just one but N times keys, queries and values are calculated, each with different weight matrices $W_{q_i}^T \in \mathbb{R}^{d\times d_k}$, $W_{k_i}^T \in \mathbb{R}^{d\times d_k}$ and $W_{v_i}^T \in \mathbb{R}^{d\times d_v}$ with $i = 1,...,N$, and the attention mechanism is executed. Each attention that is carried out is designated as a $\text{head}_i$. The results of the N attentions are concatenated and combined with another linear projection $W^O \in \mathbb{R}^{Nd_v\times d}$.
 \begin{align}
     &\text{MultiHead}\left( Q,K,V  \right) = \text{Concat}\left( \text{head}_1, ..., \text{head}_N   \right)W^O \\
     &\text{head}_i = \text{Attention}\left(XW_{q_i}^T,XW_{k_i}^T,XW_{v_i}^T \right)
@@ -78,10 +78,10 @@ This is advantageous because the individual heads can concentrate on different t
 \end{figure}
 
 \subsection{Positional Encoding}
-Before the embedded token sequence is fed as input to the transformer, a positional information is added to each token to provide the network with information about the order of the tokens. There are different methods, which can be divided into the categories relative \cite{RoPE, ALiBi, FIRE} vs absolute \cite{AttentionIsAllYouNeed, Floater, Cape, Shape} positional embedding and deterministic \cite{AttentionIsAllYouNeed, Shape, Cape, ALiBi, RoPE} vs learnable \cite{Floater, FIRE} positional embedding. 
+Before the embedded token sequence is fed as input to the transformer, a positional information is added to each token to provide the network with information about the order of the tokens. There are different methods, which can be divided into the categories relative \cite{RoPE, ALiBi, FIRE} vs absolute \cite{AttentionIsAllYouNeed, Floater, Cape, Shape} positional embedding and deterministic \cite{AttentionIsAllYouNeed, Shape, Cape, ALiBi, RoPE} versus learnable \cite{Floater, FIRE} positional embedding. 
 
 \subsubsection{Sinusoidal Positional Encoding}
-Sinusoidal positional encoding is used in the original transformer paper \cite{AttentionIsAllYouNeed} which uses the sin and cosine function  to inject positional information into the model. It belongs to the category of absolute and deterministic positional encoding.
+Sinusoidal positional encoding is used in the original transformer paper \cite{AttentionIsAllYouNeed} which leverages the sin and cosine function  to inject positional information into the model. It belongs to the category of absolute and deterministic positional encoding.
 \begin{align}
     &PE\left( pos, 2i  \right) = \sin \left(  \frac{pos}{10000^{\frac{2i}{d}}} \right) \\
     &PE \left( pos, 2i+1  \right) = \cos \left(  \frac{pos}{10000^{\frac{2i}{d}}} \right)
@@ -89,7 +89,7 @@ Sinusoidal positional encoding is used in the original transformer paper \cite{A
 where $d$ is the embedding dimension, $pos$ is the position of the token in the sequence and  $i$ is the dimension index which is used to compute different frequencies for different parts of the embedding vector. The computed positional embedding has the same dimension like the token embedding vector and is be added to it.
 
 \subsubsection{Rotary Position Embedding}
-In recent years, the focus shifted more and more from absolute positional embedding to relative positional embedding because one hypothesized that relative order of tokens matter and that these methods are better in extrapolating compared to absolute positional embedding methods \cite{PositionalEmbeddingSurvey}. Rotary Positiona Embeeding (RoPE) \cite{RoPE} is a a relative positional embedding method used in FLUX-dev \cite{Flux}. The idea is to encode the position via rotation in the attention mechanism, to be more explicit in the dot product between the queries $Q$ and the keys $K$. Starting with the 2d case, they propose that queries $Q_m$ which are soley based on the mth embedding vector $x_m$ and its position $m$ via 
+In recent years, the focus shifted more and more from absolute positional embedding to relative positional embedding because one hypothesized that relative order of tokens matter and that these methods are better in extrapolating compared to absolute positional embedding methods \cite{PositionalEmbeddingSurvey}. Rotary Positiona Embeeding (\gls{RoPE}) \cite{RoPE} is a a relative positional embedding method used in FLUX-dev \cite{Flux}. The idea is to encode the position via rotation in the attention mechanism, to be more explicit in the dot product between the queries $Q$ and the keys $K$. Starting with the 2d case, they propose that queries $Q_m$ which are soley based on the mth embedding vector $x_m$ and its position $m$ via 
 \begin{align}
     Q_m \left( x_m, m \right) &= 
     \begin{bmatrix}
@@ -138,10 +138,10 @@ because $R^d_{\theta,n-m} = (R^d_{\theta,m})^T R^d_{\theta,n}$. In contrast to s
 \end{figure}
 
 \subsection{Vision Transformer}
-Original transformers were introduced for language processing tasks. There were some attempts to transfer the methodology of the transformer architecture to computer vision problems \cite{StandAloneAttentionVisonModels, Ccnet, ImageTransformer}, but for a long time, convolutional neural networks (CNNs) \cite{CNN} remained the first choice. CNNs have an inherent advantage over transformers because they possess an image-related inductive bias. On the one hand, CNNs are translationally equivariant by construction and, on the other hand, the concept of locality is embedded in the way they are built. In contrast, these two concepts must be learned from scratch by a transformer, as they are not predefined by the architecture, which makes a sufficiently large dataset essential to achieve competitive performance. \\
+Original transformers were introduced for language processing tasks. There were some attempts to transfer the methodology of the transformer architecture to computer vision problems \cite{StandAloneAttentionVisonModels, Ccnet, ImageTransformer}, but for a long time, convolutional neural networks (\gls{CNN}s) \cite{CNN} remained the first choice. \gls{CNN}s have an inherent advantage over transformers because they possess an image-related inductive bias. On the one hand, \gls{CNN}s are translationally equivariant by construction and, on the other hand, the concept of locality is embedded in the way they are built. In contrast, these two concepts must be learned from scratch by a transformer, as they are not predefined by the architecture, which makes a sufficiently large dataset essential to achieve competitive performance. \\
 
 
-The introduction of the vision transformer (ViT) \cite{VisionTransformer} showed that given a sufficiently large datasets transformer can match or even surpass than CNNs for vision tasks. The first key aspect in ViT is that not every single pixel is related to all other pixels because this would be computationally infeasible due to the quadratic complexity of the attention mechanism. Instead, the image is split $\mathbf{x} \in \mathbb{}{R}^{N \times W \times C}$ into a sequence of smaller patches $\mathbf{x_p} \in \mathbb{}{R}^{N \times (P^2 \cdot C)}$ where $C$ is the number of channels, $H$ the height of the image, $W$ the width of the image, $(P,P)$ the resolution of a patch and $N=\frac{HW}{P^2}$ the number of patches. At the beginning of the token sequence an additional classification (CLS) token is prepended. The patches are flattened and linearly projected to the encoder dimension. After that a learned positional encoding is added before they are fed into the encoder-only transformer architecture. On top of the transformer encoder a MLP head processes the embedded version of the classification token and provides probability for the different classes from the classification problem. 
+The introduction of vision transformer (\gls{ViT}) \cite{VisionTransformer} showed that given a sufficiently large dataset transformers can match or even surpass \gls{CNN}s for vision tasks. The first key aspect in \gls{ViT} is that not every single pixel is related to all other pixels because this would be computationally infeasible due to the quadratic complexity of the attention mechanism. Instead, the image is split $\mathbf{x} \in \mathbb{}{R}^{N \times W \times C}$ into a sequence of smaller patches $\mathbf{x_p} \in \mathbb{}{R}^{N \times (P^2 \cdot C)}$ where $C$ is the number of channels, $H$ the height of the image, $W$ the width of the image, $(P,P)$ the resolution of a patch and $N=\frac{HW}{P^2}$ the number of patches. At the beginning of the token sequence an additional classification (\gls{CLS}) token is prepended. The patches are flattened and linearly projected to the encoder dimension. After that a learned positional encoding is added before they are fed into the encoder-only transformer architecture. On top of the transformer encoder a \gls{MLP} head processes the embedded version of the classification token and provides probability for the different classes from the classification problem. 
 
 
 \begin{figure}[H]
