--- a/titel_page.tex
+++ b/titel_page.tex
@@ -25,7 +25,7 @@ born in Gelnhausen (Germany)\\
 \vspace{18cm}
 
 \normalsize
-This Bachelor Thesis has been carried out by Sebastian Heid at the\\
+This Master Thesis has been carried out by Sebastian Heid at the\\
 IWR in Heidelberg\\
 under the supervision of\\
 \textbf{Prof. Dr. Carsten Rother} \\
